<resources>

    <string name="app_name">FTS</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">mmnPolicyService</string>
    <string name="start">Start Camera</string>
    <string name="stop">Stop Camera</string>
    <string name="update">20&#8211;10&#8211;12</string>
    <string name="notification_title">מערכת לכיבוי מצלמה</string>
    <string name="notification_text">מופעל בהתאם למיקום.גרסה 1.3</string>
    <string name="description">12121</string>
    <string name="toggle_on">Camera Off</string>
    <string name="toggle_off">Camera On</string>
    <string name="version">Version</string>
    <string name="date">Date</string>
    <string name="this_version">1.3</string>
    <string name="last_date">21&#8211;10&#8211;12</string>
    <string name="tnx">&#169; Losinho</string>
	<string name="checkboxText">Notification</string>
	<string name="save">Save Version</string>
	<string name="disable">Disable Admin</string>
	<string name="contentDiscription">pic</string>
	<string name="updates3">10:03</string>
	<string name="checkbox_s3">S3</string>
	<string name="menu_about">About</string>
	<string name="icon_size">icon size change button</string>
	<string name="size_1">24x24 px</string>
	<string name="size_2">36x36 px</string>
	<string name="size_3">48x48 px</string>
	<string name="sav_loc">Save Location</string>
	<string name="location_setting">Location setting</string>
	<string name="Radius">2</string>
	<string name="saveLocation">Save Location</string>
	<string name="RadiusText">Uncertainty radius [km] </string>
	<string name="location_activity_name">Location Activity</string>
	<string name="deleteLocation">Delete locations</string>
</resources>