<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewDateNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewVersionNotification"
        android:layout_alignParentRight="true"
        android:text="@string/updates3"
        android:textColor="@color/sectitle" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="11dp"
        android:layout_toLeftOf="@+id/textViewDateNotification"
        android:text="@string/notification_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewVersionNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:text="@string/notification_text"
        android:textColor="@color/sectitle"
        android:typeface="sans" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/textViewDateNotification"
        android:layout_marginLeft="32dp"
        android:contentDescription="@string/description"
        android:src="@drawable/icon" />

</RelativeLayout>